2001-06-02  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.cygwin, Makefile.win32: Travis' changes (splitshp, midisfx.flx)

2001-05-31  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.cc (Cheat): For a quick workaround to the 'flee' bug,
	switching to God Mode resets party's attack-modes to 'nearest'.

2001-05-29  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* server/servemsg.cc: std::memcpy

2001-05-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* server/servemsg.cc: #include <cstring> for memcpy

2001-05-30  Jeff Freedman  <jeff@amy.nerble.net>

	* Added 'server' directory (only needed for XWIN).
	* SI intrinsics: remove_last_face => remove_face0, remove_face1.
	* readnpcs.cc:  Kludge to avoid unneeded automatons.
	* gamewin.cc:  Risky change:  Reset all eggs in
	emulate_swapout().  Needed to recreate List Field manager (crit = 2).
	
2001-05-29  Ryan Nunn <triforce@merlin.net.au>
	* audio/midi_drivers/win_midiout.cc : Fixed a spelling error
	* gumps/AudioOptions_gump.cc : Fixed reverb & chorus config problem

2001-05-29  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* Timidity_binary.cc: std::strcpy
	* gumps/Newfile_gump.cc: std::strcpy,std::strcat,std::memcpy,std::memset
	* tools/shp2pcx.cc: std::memset
	* tools/splitshp.cc: std:: strcpy/strrchr/memcpy/strlen
	* usecode/compiler/ucparse.yy: std::strlen,std::strcpy,std::strcat
	* usecode/compiler/ucmain.cc: std::strlen,std::strcpy,std::strrchr
	* usecode/compiler/ucfun.cc: std::strlen,std::memcpy
	* usecode/compiler/ucloc.cc: std::strlen,std::strcpy,std::strlen
	* usecode/compiler/ucsym.cc: std::strcmp
	* ... you get the idea ...

2001-05-29  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: DON'T close all gumps when casting a spell.
	* effects.cc (Death_vortex): Death Vortex spell implemented.

2001-05-28  Dancer Vesperman <dancer@users.sourceforge.net>
	* actors.cc: uninline static method called from external translation