@@ -1,5 +1,6 @@
 2001-06-02  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* Makefile.cygwin, Makefile.win32: Travis' changes (splitshp, midisfx.flx)
+	* intrinsics.cc: implemented si_display_map
 
 2001-05-31  Jeff Freedman  <jeff@amy.nerble.net>
 
